# my-project

motor_driver/: package.xml  setup.py
motor_driver/motor_driver/: motor_control_node.py
my_robot_description/: package.xml  setup.py
my_robot_description/action/: PauseMode.action  ReturnToHome.action
my_robot_description/config/: amr_slam.yaml  ekf.yaml  gz_bridge.yaml  nav2_params.yaml  slam_params.yaml
my_robot_description/launch/: amr_navigation.launch.py  auto_slam.launch.py  gazebo.launch.py  my_nav2_bringup.launch.py  robot_localization.launch.py
my_robot_description/maps/: my_slam_map.pgm  my_slam_map.yaml
my_robot_description/my_robot_description/: CMakeLists.txt  autonomous_explorer.py  frame_fixer.py  go_to_checkpoint_node.py  interactive_stuck_detector.py  laser_to_sonar_node.py  recalculate_path_node.py  return_to_home_node.py  save_all.py  stuck_manager_node.py  waypoint_recorder.py
my_robot_description/my_robot_description/config/: ekf.yaml  gz_bridge.yaml  nav2_params.yaml
my_robot_description/my_robot_description/launch/: robot_localization.launch.py
my_robot_description/my_robot_description/my_robot_description/: goal_monitor_node.py  laser_to_sonar_node.py  pause_mode_node.py  return_to_home_node.py  stuck_ui_node.py
my_robot_description/rviz/: my_nav2_view.rviz  nav2_view.rviz  slam_view.rviz
my_robot_description/srv/: SaveAll.srv
my_robot_description/urdf/: my_robot.gazebo.xacro
my_robot_description/worlds/: slam_world.sdf  test_world.sdf
robot/: package.xml  setup.py
