<?xml version="1.0"?>
<package format="3">
  <name>motor_driver</name>
  <version>0.0.1</version>
  <description>ROS 2 package for controlling motors using Arduino and ZK-BM1 via Serial</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>pyserial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
