<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.1</version>
  <description>Robot with RViz2 and Gazebo using ROS 2</description>
  <maintainer email="guygan2002@gmail.com">guygan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>tf2_ros</depend>

  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <depend>robot_localization</depend>
  <depend>slam_toolbox</depend>

  <depend>navigation2</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_velocity_smoother</depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <depend>rviz2</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>